src/style.css
:root {
  --bg-color-no-content: rgb(32, 35, 36);
  --bg-color-content: rgb(69, 74, 77);
  --gentle-white: rgb(226, 223, 219);
  --bg-color-table: rgb(57, 61, 64);
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

  background-color: var(--bg-color-no-content);
  padding: 0;
  margin: 0;
}

a {
  text-decoration: underline;
  color: var(--gentle-white);
  font-weight: bold;
}

.content-wrapper {
  max-width: 1000px;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--bg-color-content);
  min-height: 100vh;
  box-shadow: 0 0 3px black;
}

.text-contrast {
  color: var(--gentle-white);
}

.text-contrast > * {
  color: var(--gentle-white);
}

.text-contrast > * > * {
  color: var(--gentle-white);
}

.table-wrapper {
  background-color: var(--bg-color-no-content);
  padding: 8px 16px 16px;
  margin-bottom: 20px;
  border-radius: 12px;
}

h2,
h3 {
  margin: 0;
}

